--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -24,10 +24,10 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/exitMapButton"
+                android:id="@+id/infoButton"
                 android:layout_width="200dp"
                 android:layout_height="100dp"
-                android:text="EXIT"
+                android:text="Show Info Again"
                 android:layout_marginLeft="5dp">
             </Button>
 
