--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -25,11 +25,16 @@
 
             <Button
                 android:id="@+id/infoButton"
-                android:layout_width="200dp"
+                android:layout_width="99dp"
                 android:layout_height="100dp"
-                android:text="Show Info Again"
-                android:layout_marginLeft="5dp">
-            </Button>
+                android:layout_marginLeft="5dp"
+                android:text="Show Info Again"></Button>
+
+            <Button
+                android:id="@+id/remakeRouteButton"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:text="Find Route"></Button>
 
             <Button
                 android:id="@+id/nextStopButton"
