--- a/app/src/main/res/layout/activity_tour_menu.xml
+++ b/app/src/main/res/layout/activity_tour_menu.xml
@@ -24,7 +24,8 @@
             android:layout_width="120dp"
             android:layout_height="60dp"
             android:contentDescription="@string/app_name"
-            android:background="@drawable/bg_button_primary" />
+            android:background="@drawable/bg_button_primary"
+            android:src="@drawable/logo" />
 
         <View
             android:layout_width="0dp"
