--- a/app/src/main/res/layout/activity_show_location_info.xml
+++ b/app/src/main/res/layout/activity_show_location_info.xml
@@ -59,6 +59,7 @@
 
         <Button
             android:id="@+id/btnViewOnMap"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/view_on_map" />
