Saved tours bug fixing

--- a/app/src/main/res/layout/activity_tour_menu.xml
+++ b/app/src/main/res/layout/activity_tour_menu.xml
@@ -68,6 +68,12 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <Button
+            android:id="@+id/btnSavedTours"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/saved_tours" />
+
+        <Button
             android:id="@+id/btnBitesPints"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -103,14 +109,6 @@
             android:layout_marginBottom="12dp"
             android:background="@drawable/bg_button_primary" />
 
-        <Button
-            android:id="@+id/btnLocalBusiness"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Local Businesses Tour"
-            android:textSize="20sp"
-            android:layout_marginBottom="12dp"
-            android:background="@drawable/bg_button_primary" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
