--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -8,20 +8,22 @@
     <!-- Email input -->
     <EditText
         android:id="@+id/etEmail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:autofillHints="emailAddress"
         android:hint="@string/email_hint"
         android:inputType="textEmailAddress"
-        android:autofillHints="emailAddress"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:minHeight="48dp" />
 
     <!-- Password input -->
     <EditText
         android:id="@+id/etPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:autofillHints="password"
         android:hint="@string/password_hint"
         android:inputType="textPassword"
-        android:autofillHints="password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:minHeight="48dp" />
 
     <!-- Create account button -->
     <Button
