UI fixing for button and logo

--- a/app/src/main/res/layout/activity_show_location_info.xml
+++ b/app/src/main/res/layout/activity_show_location_info.xml
@@ -35,11 +35,12 @@
 
     <TextView
         android:id="@+id/tvDescription"
-        android:layout_marginTop="8dp"
-        android:layout_width="match_parent"
+        android:layout_width="392dp"
         android:layout_height="0dp"
+        android:layout_marginTop="8dp"
         android:layout_weight="1"
-        android:scrollbars="vertical" />
+        android:scrollbars="vertical"
+        android:textSize="16sp"/>
 
 
 
@@ -67,10 +68,10 @@
         <Button
             android:id="@+id/btnNext"
             style="?android:attr/buttonBarButtonStyle"
-            android:text="@string/next"
-            android:layout_marginStart="16dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:text="@string/next" />
 
         <Button
             android:id="@+id/btnSaveTour"
