--- a/app/src/main/res/layout/activity_tour_menu.xml
+++ b/app/src/main/res/layout/activity_tour_menu.xml
@@ -24,7 +24,8 @@
             android:layout_width="120dp"
             android:layout_height="60dp"
             android:contentDescription="@string/app_name"
-            android:background="@drawable/bg_button_primary" />
+            android:background="@drawable/bg_button_primary"
+            android:layout_marginTop="32dp"/>
 
         <View
             android:layout_width="0dp"
@@ -34,8 +35,8 @@
         <!-- Profile icon button (goes to ProfileActivity) -->
         <ImageButton
             android:id="@+id/btnProfile"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:background="@android:color/transparent"
             android:src="@android:drawable/ic_menu_myplaces"
             android:contentDescription="@string/profile" />
