--- a/app/src/main/res/layout/activity_tour_menu.xml
+++ b/app/src/main/res/layout/activity_tour_menu.xml
@@ -19,13 +19,16 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <!-- Logo  -->
+
         <ImageView
             android:id="@+id/imgLogo"
-            android:layout_width="120dp"
-            android:layout_height="60dp"
-            android:contentDescription="@string/app_name"
+            android:layout_width="200dp"
+            android:layout_height="140dp"
+            android:layout_marginTop="3dp"
             android:background="@drawable/bg_button_primary"
-            android:layout_marginTop="32dp"/>
+            android:contentDescription="@string/app_name"
+            android:scaleType="fitXY"
+            android:src="@drawable/logo" />
 
         <View
             android:layout_width="0dp"
@@ -35,11 +38,11 @@
         <!-- Profile icon button (goes to ProfileActivity) -->
         <ImageButton
             android:id="@+id/btnProfile"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="77dp"
+            android:layout_height="79dp"
             android:background="@android:color/transparent"
-            android:src="@android:drawable/ic_menu_manage"
-            android:contentDescription="@string/profile" />
+            android:contentDescription="@string/profile"
+            android:src="@android:drawable/ic_menu_manage" />
     </LinearLayout>
 
     <!-- "Select your tour" -->
