--- a/app/src/main/res/layout/activity_tour_menu.xml
+++ b/app/src/main/res/layout/activity_tour_menu.xml
@@ -22,10 +22,11 @@
 
         <ImageView
             android:id="@+id/imgLogo"
-            android:layout_width="200dp"
+            android:layout_width="160dp"
             android:layout_height="140dp"
             android:layout_marginTop="3dp"
-            android:background="@drawable/bg_button_primary"
+            android:layout_marginStart="100dp"
+            android:background="@android:color/transparent"
             android:contentDescription="@string/app_name"
             android:scaleType="fitXY"
             android:src="@drawable/logo" />
