--- a/app/src/main/res/layout/activity_tour_menu.xml
+++ b/app/src/main/res/layout/activity_tour_menu.xml
@@ -28,7 +28,7 @@
             android:layout_marginStart="100dp"
             android:background="@android:color/transparent"
             android:contentDescription="@string/app_name"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             android:src="@drawable/logo" />
 
         <View
