--- a/app/src/main/res/layout/activity_saved_tours.xml
+++ b/app/src/main/res/layout/activity_saved_tours.xml
@@ -7,14 +7,16 @@
         android:orientation="vertical"
         android:padding="16dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
 
         <TextView
             android:id="@+id/tvNoSaved"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/no_saved_tours"
-            android:visibility="gone" />
+            android:visibility="gone"
+            />
 
         <LinearLayout
             android:id="@+id/savedToursContainer"
@@ -24,7 +26,8 @@
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
             android:paddingTop="48dp"
-            android:gravity="center_horizontal"/>
+            android:gravity="center_horizontal"
+            />
 
     </LinearLayout>
 </ScrollView>
